<resources>
    <string name="app_name">RestApp</string>
    <string name="email">Email</string>
    <string name="hint_mail">Type email</string>
    <string name="password">Password</string>
    <string name="hint_password">Type password</string>
    <string name="log_in">Sign in</string>
    <string name="no_internet">Нет интернета</string>
    <string name="email_bad">Email is bad</string>
    <string name="password_bad">Password is bad</string>
    <string name="fail">Fail</string>
    <string name="logOut">Log Out</string>
    <string name="are_you_sure_log_out">Уверены, что хотитет выйти из аккаунта?</string>
    <string name="no_prifile_data">No profile data</string>
</resources>
