<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailTittle"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textColor="@color/blueyGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:animateLayoutChanges="true"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/HintTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTittle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_heigh"
                android:hint="@string/hint_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|textCapWords"
                android:paddingTop="6dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--password-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordTittle"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="24dp"
            android:text="@string/password"
            android:textColor="@color/blueyGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:animateLayoutChanges="true"
            app:errorEnabled="false"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/HintTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTittle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingTop="6dp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="32dp"
            android:text="@string/log_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--email-->

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>